--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<h1>Boni piccione</h1>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+	
+	
+	<title>Indice Lavori Tps Boni</title>
+</head>
+<body class="home">
+
+<header id="header">
+	<div id="head" class="parallax" parallax-speed="2">
+		<h1 id="logo" class="text-center">
+			<span class="title">Enrico Boni</span>
+			<span class="tagline">4^A informatica<br>
+		</h1>
+	</div>
+
+	<nav class="navbar navbar-default navbar-sticky">
+					<li class="dropdown">
+						<a class="dropdown-toggle" data-toggle="dropdown">Lavori tps<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li class="active"><a href="Stella.html">GRAFICO STELLA</a></li>
+							<li><a href="sbarchi.html">TABELLA SBARCHI</a></li>
+              <li><a href="criptato1.html">PAGINA UPLOAD CRIPTAZIONE</a></li>
+              <li><a href="criptato2.html">PAGINA DI CRIPTAZIONE</a></li>
+						</ul>
+					</li>
+	</nav>
+</header>
+</body>
+</html>
