--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 						<ul class="dropdown-menu">
 							<li class="active"><a href="Stella.html">GRAFICO STELLA</a></li>
 							<li><a href="sbarchi.html">TABELLA SBARCHI</a></li>
-              <li><a href="criptato1.html">PAGINA UPLOAD CRIPTAZIONE</a></li>
-              <li><a href="criptato2.html">PAGINA DI CRIPTAZIONE</a></li>
+				              <li><a href="criptato1.html">PAGINA UPLOAD CRIPTAZIONE</a></li>
+				              <li><a href="criptato2.html">PAGINA DI CRIPTAZIONE</a></li>
+							<li><a href="elenchi_misti.html">ELENCHI MISTI</a></li>
 						</ul>
 					</li>
 	</nav>
